fix: hero section mobile view

--- a/src/views/Main.module.css
+++ b/src/views/Main.module.css
@@ -8,19 +8,51 @@
   padding-top: 8rem;
 }
 
+@media screen and (max-width: 600px) {
+  .hero-jumbotron {
+    height: 100vh;
+    background: url("../images/heroImage.jpeg");
+    background-size: cover;
+    position: relative;
+    padding-top: 8rem;
+  }
+
+  .little-img {
+    display: none;
+  }
+
+  .hero-title {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+
+  .hero-desc {
+    text-align: center;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+}
+
 /* text css above hero image*/
-.hero_title {
+/* .hero_title {
   font-size: 4.5rem;
   color: white;
 }
 .hero_desc {
   font-size: 2rem;
-}
-.hero-text {
+} */
+/* .hero-text {
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-}
+} */
